force-app/main/default/objects/FlashCard_Button_Configuration__mdt/FlashCard_Button_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>FlashCard Button Configuration</label>
    <pluralLabel>FlashCard Button Configurations</pluralLabel>
</CustomObject>