force-app/main/default/objects/FlashCard_Button_Configuration__mdt/fields/iconName__c.field-meta.xml
<CustomField>
    <fullName>iconName__c</fullName>
    <label>iconName</label>
    <length>140</length>
    <type>Text</type>
</CustomField>