force-app/main/default/objects/FlashCard_Button_Configuration__mdt/fields/lwcName__c.field-meta.xml
<CustomField>
    <fullName>lwcName__c</fullName>
    <label>lwcName</label>
    <length>140</length>
    <type>Text</type>
</CustomField>