force-app/main/default/objects/FlashCard_Button_Configuration__mdt/fields/slotName__c.field-meta.xml
<CustomField>
    <fullName>slotName__c</fullName>
    <label>slotName</label>
    <length>140</length>
    <type>Text</type>
</CustomField>